upload file test

--- a/html/nav.html
+++ b/html/nav.html
@@ -207,7 +207,7 @@
 					<div id="add_exp_log">
 
 					</div>
-					<button class="btn btn-md btn-info m-1 px-3" type="button" ng-click="add_exp()"">Add Experiment</button>
+					<button class="btn btn-md btn-info m-1 px-3" type="button" ng-click="add_exp()">Add Experiment</button>
 					<button class="btn btn-md btn-info m-0 px-3" type="button" data-dismiss="modal">Close</button>
 				</div>
 			</div>
