test exp form design

--- a/html/exp.html
+++ b/html/exp.html
@@ -75,7 +75,7 @@
                     <tbody ng-repeat="item2 in h_2">
                         <tr ng-if="item2.index==0">
                             <td>
-                                {{item2.val}}
+                                <i class="fas fa-folder"></i> {{item2.val}}
                             </td>
                         </tr>
                         <tr ng-if="item2.index!=0">
