--- a/html/nav.html
+++ b/html/nav.html
@@ -7,7 +7,7 @@
 			<!-- Left links-->
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
-					<li class="nav-item">
+					<!--<li class="nav-item">
 						<a class="nav-link waves-effect" href="#" ng-click="hide_pages();init_avivTest()">
 							<span class="glyphicon glyphicon glyphicon-option-vertical" aria-hidden="true">
 							</span>
@@ -20,7 +20,7 @@
 							</span>
 							About
 						</a>
-					</li>
+					</li>-->
 					<li class="nav-item" >
 						<a class="nav-link waves-effect" href="#" ng-click="hide_pages();show_exp()">
 							<span class="glyphicon glyphicon glyphicon-option-vertical" aria-hidden="true" >
@@ -29,13 +29,13 @@
 						</a>
 					</li>
 
-					<li class="nav-item">
+					<!--<li class="nav-item">
 						<a class="nav-link waves-effect" href="#" ng-click="">
 								<span class="glyphicon glyphicon glyphicon-option-vertical" aria-hidden="true">
 								</span>
 							Statistics
 						</a>
-					</li>
+					</li>-->
 
 				</ul>
 
@@ -115,7 +115,7 @@
 						<div class="form-row">
 							<div class="col-sm-5 ">
 									<div class="input-default-wrapper">
-										<input type="file" id="file_csv" class="input-default-js" file-model="file_csv">
+										<input type="file" id="file_csv" class="input-default-js" ng-file="file_csv">
 										<label class="label-for-default-js rounded-right mb-3" for="file_csv">
 											<span class="span-choose-file">Choose CSV file</span>
 										</label>
@@ -142,7 +142,7 @@
 									<div class="col">
 										<div class="col-sm-12 md-form input-group">
 											<div class="input-default-wrapper">
-												<input type="file" id="first_xsd" class="input-default-js" file-model="first_xsd_file">
+												<input type="file" id="first_xsd" class="input-default-js" ng-file="first_xsd_file">
 												<label class="label-for-default-js rounded-right mb-3" for="first_xsd">
 													<span class="span-choose-file">Choose XSD file</span>
 												</label>
@@ -172,7 +172,7 @@
 										<div class="col-sm-12 md-form input-group">
 											<div class="input-default-wrapper">
 												<input type="file" id="sec_xsd" class="input-default-js">
-												<label class="label-for-default-js rounded-right mb-3" for="sec_xsd" file-model="sec_xsd_file">
+												<label class="label-for-default-js rounded-right mb-3" for="sec_xsd" ng-file="sec_xsd_file">
 													<span class="span-choose-file">Choose second XSD file</span>
 												</label>
 											</div>
@@ -183,7 +183,7 @@
 										<div class="col-sm-12 md-form input-group">
 											<div class="input-default-wrapper">
 												<input type="file" id="sec_xml" class="input-default-js" data-multiple-target="{target} files selected"
-													   multiple file-model="sec_xml_file">
+													   multiple ng-file="sec_xml_file">
 												<label class="label-for-default-js rounded-right" for="sec_xml">
 													<span class="span-choose-file">Choose second XML files</span>
 												</label>
