test exp form design

--- a/html/exp.html
+++ b/html/exp.html
@@ -83,7 +83,7 @@
                                 {{decorateWithSpace($index,item2.val)}}
                             </td>-->
                             <td>
-                                <star-rating value="{{$index}}">
+                                <star-rating value="$index">
                                 </star-rating>
                             </td>
                         </tr>
