test exp form design

--- a/html/exp.html
+++ b/html/exp.html
@@ -83,7 +83,7 @@
                                 {{decorateWithSpace($index,item2.val)}}
                             </td>-->
                             <td>
-                                <i class="fa fa-star" ng-repeat="t in getCustomRepeatArray($index)"></i>
+                                <i class="fa fa-star" ng-repeat="t in getCustomRepeatArray($index)"></i>{{item2.val}}
                             </td>
                         </tr>
                     </tbody>
