--- a/html/exp.html
+++ b/html/exp.html
@@ -82,6 +82,7 @@
                             <!--<td id="table_b_{{$index}}">
                                 {{decorateWithSpace($index,item2.val)}}
                             </td>-->
+                            <h1 ng-repeat="t in getCustomRepeatArray(item2.index)"> - </h1>
                             <td>
                                 <i class="fa fa-star" ng-repeat="t in getCustomRepeatArray(item2.index)"></i>{{item2.val}}
                             </td>
