test exp form design

--- a/html/new_user.html
+++ b/html/new_user.html
@@ -76,6 +76,11 @@
 				<input type="radio" class="custom-control-input" id="new_user_man" ng-model="new_user_gender_val" value="man">
 				<label class="custom-control-label" for="new_user_man">Man</label>
 			</div>
+			<div class="custom-control custom-radio custom-control-inline">
+				<i class="fas fa-venus-mars prefix"></i>
+				<input type="radio" class="custom-control-input" id="new_user_other" ng-model="new_user_gender_val" value="other">
+				<label class="custom-control-label" for="new_user_other">Other</label>
+			</div>
 		</div>
 	</div>
 
