--- a/html/exp.html
+++ b/html/exp.html
@@ -83,7 +83,7 @@
                                 {{decorateWithSpace($index,item2.val)}}
                             </td>-->
                             <td>
-                                <i class="fa fa-folder-open" ng-repeat="t in getCustomRepeatArray(item2.index)"></i>{{item2.index}}
+                                <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item2.index)"></i><i class="fa fa-folder-oprn"></i>{{item2.index}}
                             </td>
                         </tr>
                     </tbody>
