--- a/html/exp.html
+++ b/html/exp.html
@@ -62,8 +62,11 @@
                             </td>
                         </tr>
                         <tr ng-if="item.index!=0">
-                            <td id="table_a_{{$index}}">
+                            <!--<td id="table_a_{{$index}}">
                                 {{decorateWithSpace($index,item.val)}}
+                            </td>-->
+                            <td>
+                                <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item.index)"></i><i class="fa fa-folder-open"></i>{{item.index}}
                             </td>
                         </tr>
                     </tbody>
@@ -83,7 +86,7 @@
                                 {{decorateWithSpace($index,item2.val)}}
                             </td>-->
                             <td>
-                                <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item2.index)"></i><i class="fa fa-folder-oprn"></i>{{item2.index}}
+                                <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item2.index)"></i><i class="fa fa-folder-open"></i>{{item2.index}}
                             </td>
                         </tr>
                     </tbody>
