--- a/html/exp.html
+++ b/html/exp.html
@@ -58,7 +58,7 @@
                     <tbody ng-repeat="item in h_1">
                         <tr ng-if="item.index==0">
                             <td>
-                                {{item.val}}
+                                <i class="fas fa-folder"></i>{{item.val}}
                             </td>
                         </tr>
                         <tr ng-if="item.index!=0">
