--- a/html/exp.html
+++ b/html/exp.html
@@ -66,7 +66,7 @@
                                 {{decorateWithSpace($index,item.val)}}
                             </td>-->
                             <td>
-                                <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item.index)"></i><i class="fa fa-folder-open"></i>{{item.index}}
+                                <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item.index)"></i><i class="fa fa-folder-open"></i>{{item.val}}
                             </td>
                         </tr>
                     </tbody>
@@ -78,7 +78,7 @@
                     <tbody ng-repeat="item2 in h_2">
                         <tr ng-if="item2.index==0">
                             <td>
-                                <i class="fas fa-folder"></i> {{item2.index}}
+                                <i class="fas fa-folder"></i> {{item2.val}}
                             </td>
                         </tr>
                         <tr ng-if="item2.index!=0">
@@ -86,7 +86,7 @@
                                 {{decorateWithSpace($index,item2.val)}}
                             </td>-->
                             <td>
-                                <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item2.index)"></i><i class="fa fa-folder-open"></i>{{item2.index}}
+                                <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item2.index)"></i><i class="fa fa-folder-open"></i>{{item2.val}}
                             </td>
                         </tr>
                     </tbody>
