get random active exp with controls

--- a/html/exp.html
+++ b/html/exp.html
@@ -27,7 +27,7 @@
             </div>
 
         </div>
-        <div class="row">
+        <div class="row" id="row_type">
             <div class="col" id="A_col_type">
                 String
             </div>
