get random active exp with controls

--- a/html/exp.html
+++ b/html/exp.html
@@ -19,6 +19,9 @@
 
         </div>
         <div class="row">
+            <div class="col">
+                Column Name
+            </div>
             <div class="col" id="A_col_name">
                 FirstName
             </div>
@@ -28,6 +31,9 @@
 
         </div>
         <div class="row" id="row_type">
+            <div class="col">
+                Column Type
+            </div>
             <div class="col" id="A_col_type">
                 String
             </div>
@@ -37,12 +43,15 @@
             </div>
 
         </div>
-        <div class="row">
+        <div class="row" id="row_control">
             <div class="col" id="exp_pair_score">
                 System Suggestion: 0.6 similar
             </div>
         </div>
-        <div class="row">
+        <div class="row" id="row_instance">
+            <div class="col">
+                Instance Example
+            </div>
             <div class="col" id="A_col_instance">
                 Roee, Avigdor
             </div>
@@ -52,7 +61,10 @@
             </div>
 
         </div>
-        <div class="row" style="margin-top: 5px">
+        <div class="row" style="margin-top: 5px" id="row_h">
+            <div class="col">
+                Hierarchy
+            </div>
             <div class="col text-center">
                 <table align="center"  id="term_a_table_h">
                     <tbody ng-repeat="item in h_1">
