--- a/html/exp.html
+++ b/html/exp.html
@@ -1,4 +1,4 @@
-<div id="experiment" style="margin-top: 100px" ng-mousemove="captureCoordinate($event)">
+< id="experiment" style="margin-top: 100px" ng-mousemove="captureCoordinate($event)">
 
 
     <h1 id="exp_hello">
@@ -7,130 +7,132 @@
     <hr>
 
 
-    <div class="col-sm-12 text-center" >
+    <table class="table text-center">
 
-        <div class="row">
-            <div class="col">
-                <h3>Term A</h3>
-            </div>
-            <div class="col">
-                <h3>Term B</h3>
-            </div>
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">
+                    Term A
+                </th>
+                <th scope="col">
+                    Term B
+                </th>
 
-        </div>
-        <div class="row">
-            <div class="col">
-                Column Name
-            </div>
-            <div class="col" id="A_col_name">
-                FirstName
-            </div>
-            <div class="col" id="B_col_name">
-                YourName
-            </div>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th scope="row">
+                    Column Name
+                </th>
+                <td id="A_col_name">
+                    FirstName
+                </td>
+                <td id="B_col_name">
+                    YourName
+                </td>
 
-        </div>
-        <div class="row" id="row_type">
-            <div class="col">
-                Column Type
-            </div>
-            <div class="col" id="A_col_type">
-                String
-            </div>
+            </tr>
+            <tr id="row_type">
+                <th scope="row">
+                    Column Type
+                </th>
+                <td id="A_col_type">
+                    String
+                </td>
+                <td  id="B_col_type">
+                    Varchar
+                </td>
+            </tr>
+            <tr id="row_control">
+                <td id="exp_pair_score">
+                    System Suggestion: 0.6 similar
+                </td>
+            </tr>
+            <tr id="row_instance">
+                <th scope="row">
+                    Instance Example
+                </th>
+                <td id="A_col_instance">
+                    Roee, Avigdor
+                </td>
 
-            <div class="col" id="B_col_type">
-                Varchar
-            </div>
+                <td id="B_col_instance">
+                    Roee Shraga, Avigdor
+                </td>
 
-        </div>
-        <div class="row" id="row_control">
-            <div class="col" id="exp_pair_score">
-                System Suggestion: 0.6 similar
-            </div>
-        </div>
-        <div class="row" id="row_instance">
-            <div class="col">
-                Instance Example
-            </div>
-            <div class="col" id="A_col_instance">
-                Roee, Avigdor
-            </div>
+            </tr>
+            <tr style="margin-top: 5px" id="row_h">
+                <th scope="row">
+                    Hierarchy
+                </th>
+                <td class="text-center">
+                    <table align="center"  id="term_a_table_h">
+                        <tbody ng-repeat="item in h_1">
+                            <tr ng-if="item.index==0">
+                                <td>
+                                    <i class="fas fa-folder"></i>{{item.val}}
+                                </td>
+                            </tr>
+                            <tr ng-if="item.index!=0">
+                                <!--<td id="table_a_{{$index}}">
+                                    {{decorateWithSpace($index,item.val)}}
+                                </td>-->
+                                <td>
+                                    <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item.index)"></i><i class="fa fa-folder-open"></i>{{item.val}}
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
 
-            <div class="col" id="B_col_instance">
-                Roee Shraga, Avigdor
-            </div>
-
-        </div>
-        <div class="row" style="margin-top: 5px" id="row_h">
-            <div class="col">
-                Hierarchy
-            </div>
-            <div class="col text-center">
-                <table align="center"  id="term_a_table_h">
-                    <tbody ng-repeat="item in h_1">
-                        <tr ng-if="item.index==0">
-                            <td>
-                                <i class="fas fa-folder"></i>{{item.val}}
-                            </td>
-                        </tr>
-                        <tr ng-if="item.index!=0">
-                            <!--<td id="table_a_{{$index}}">
-                                {{decorateWithSpace($index,item.val)}}
-                            </td>-->
-                            <td>
-                                <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item.index)"></i><i class="fa fa-folder-open"></i>{{item.val}}
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-
-            <div class="col text-center">
-                <table align="center" id="term_b_table_h">
-                    <tbody ng-repeat="item2 in h_2">
-                        <tr ng-if="item2.index==0">
-                            <td>
-                                <i class="fas fa-folder"></i> {{item2.val}}
-                            </td>
-                        </tr>
-                        <tr ng-if="item2.index!=0">
-                            <!--<td id="table_b_{{$index}}">
-                                {{decorateWithSpace($index,item2.val)}}
-                            </td>-->
-                            <td>
-                                <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item2.index)"></i><i class="fa fa-folder-open"></i>{{item2.val}}
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-
-        </div>
-
+                <td class="text-center">
+                    <table align="center" id="term_b_table_h">
+                        <tbody ng-repeat="item2 in h_2">
+                            <tr ng-if="item2.index==0">
+                                <td>
+                                    <i class="fas fa-folder"></i> {{item2.val}}
+                                </td>
+                            </tr>
+                            <tr ng-if="item2.index!=0">
+                                <!--<td id="table_b_{{$index}}">
+                                    {{decorateWithSpace($index,item2.val)}}
+                                </td>-->
+                                <td>
+                                    <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item2.index)"></i><i class="fa fa-folder-open"></i>{{item2.val}}
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+            </tr>
 
 
-        <div class="row">
-            <div class="col">
-                <div style="margin-top: 100px; ">
-                    <div class="md-form col-sm-5" style="margin: 0 auto;float: none;">
-                        <input type="text" id="user_confidence" class="form-control" aria-describedby="user_confidenceMD">
-                        <label for="user_confidence">Your Confidence</label>
-                        <small id="user_confidenceMD" class="form-text text-muted">
-                            Insert Confidence level that this two terms are the same (in [0,1])
-                        </small>
+
+            <tr>
+                <td>
+                    <div style="margin-top: 100px; ">
+                        <div class="md-form col-sm-5" style="margin: 0 auto;float: none;">
+                            <input type="text" id="user_confidence" class="form-control" aria-describedby="user_confidenceMD">
+                            <label for="user_confidence">Your Confidence</label>
+                            <small id="user_confidenceMD" class="form-text text-muted">
+                                Insert Confidence level that this two terms are the same (in [0,1])
+                            </small>
+
+                        </div>
+                        <button class="btn btn-md btn-info m-0 px-3" type="button" ng-click="exp_res()">submit</button>
+
 
                     </div>
-                    <button class="btn btn-md btn-info m-0 px-3" type="button" ng-click="exp_res()">submit</button>
+
+                </td>
 
 
-                </div>
+            </tr>
+        </tbody>
 
-            </div>
-
-
-        </div>
-
-    </div>
+    </table>
 
 
 
