--- a/html/exp.html
+++ b/html/exp.html
@@ -1,4 +1,4 @@
-< id="experiment" style="margin-top: 100px" ng-mousemove="captureCoordinate($event)">
+<div id="experiment" style="margin-top: 100px" ng-mousemove="captureCoordinate($event)">
 
 
     <h1 id="exp_hello">
