get random active exp with controls

--- a/html/exp.html
+++ b/html/exp.html
@@ -11,7 +11,7 @@
 
         <thead>
             <tr>
-                <th scope="col">#</th>
+                <th scope="col" style="width:100px">#</th>
                 <th scope="col">
                     Term A
                 </th>
