get random active exp with controls

--- a/html/exp.html
+++ b/html/exp.html
@@ -46,7 +46,7 @@
                 </td>
             </tr>
             <tr id="row_control">
-                <td id="exp_pair_score">
+                <td colspan="3" id="exp_pair_score">
                     System Suggestion: 0.6 similar
                 </td>
             </tr>
