get random active exp with controls

--- a/html/exp.html
+++ b/html/exp.html
@@ -111,7 +111,7 @@
 
 
             <tr>
-                <td>
+                <td colspan="3">
                     <div style="margin-top: 100px; ">
                         <div class="md-form col-sm-5" style="margin: 0 auto;float: none;">
                             <input type="text" id="user_confidence" class="form-control" aria-describedby="user_confidenceMD">
