--- a/html/exp.html
+++ b/html/exp.html
@@ -114,11 +114,14 @@
                 <td colspan="3">
                     <div style="margin-top: 100px; ">
                         <div class="md-form col-sm-5" style="margin: 0 auto;float: none;">
-                            <input type="number" id="user_confidence" class="form-control validate" aria-describedby="user_confidenceMD" min="0" max="1" step="0.1">
+                            <!--<input type="number" id="user_confidence" class="form-control validate" aria-describedby="user_confidenceMD" min="0" max="1" step="0.01">
                             <label for="user_confidence" data-error="wrong" data-success="right">Your Confidence</label>
                             <small id="user_confidenceMD" class="form-text text-muted">
                                 Insert Confidence level that this two terms are the same (in [0,1])
                             </small>
+                            -->
+                            <input id="user_confidence" type="range" min="0" max="2" step="0.1"/>
+                            <label for="user_confidence" data-error="wrong" data-success="right">Your Confidence</label>
 
                         </div>
                         <button class="btn btn-md btn-info m-0 px-3" type="button" ng-click="exp_res()" >submit</button>
