--- a/html/exp.html
+++ b/html/exp.html
@@ -120,7 +120,7 @@
                                 Insert Confidence level that this two terms are the same (in [0,1])
                             </small>
                             -->
-                            <input id="user_confidence" type="range" min="0" max="2" step="0.1"/>
+                            <input id="user_confidence" class="custom-range" type="range" min="0" max="2" step="0.1"/>
                             <label for="user_confidence" data-error="wrong" data-success="right">Your Confidence</label>
 
                         </div>
