--- a/html/exp.html
+++ b/html/exp.html
@@ -68,7 +68,7 @@
                     Hierarchy
                 </th>
                 <td class="text-center">
-                    <table align="center"  id="term_a_table_h">
+                    <table class="table table-borderless" align="center"  id="term_a_table_h">
                         <tbody ng-repeat="item in h_1">
                             <tr ng-if="item.index==0">
                                 <td>
@@ -88,7 +88,7 @@
                 </td>
 
                 <td class="text-center">
-                    <table align="center" id="term_b_table_h">
+                    <table class="table table-borderless" align="center" id="term_b_table_h">
                         <tbody ng-repeat="item2 in h_2">
                             <tr ng-if="item2.index==0">
                                 <td>
@@ -120,7 +120,7 @@
                                 Insert Confidence level that this two terms are the same (in [0,1])
                             </small>
                             -->
-                            <input id="user_confidence" class="custom-range" type="range" min="0" max="2" step="0.1"/>
+                            <input id="user_confidence" class="custom-range" type="range" min="0" max="1" step="0.01"/>
                             <label for="user_confidence" data-error="wrong" data-success="right">Your Confidence</label>
 
                         </div>
