--- a/html/exp.html
+++ b/html/exp.html
@@ -68,10 +68,10 @@
                     Hierarchy
                 </th>
                 <td class="text-center">
-                    <table class="table table-borderless" align="center"  id="term_a_table_h">
+                    <table class="table table-borderless text-center"  id="term_a_table_h">
                         <tbody ng-repeat="item in h_1">
                             <tr ng-if="item.index==0">
-                                <td class="align-middle">
+                                <td>
                                     <i class="fas fa-folder"></i>{{item.val}}
                                 </td>
                             </tr>
@@ -79,7 +79,7 @@
                                 <!--<td id="table_a_{{$index}}">
                                     {{decorateWithSpace($index,item.val)}}
                                 </td>-->
-                                <td class="align-middle">
+                                <td>
                                     <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item.index)"></i><i class="fa fa-folder-open"></i>{{item.val}}
                                 </td>
                             </tr>
@@ -91,7 +91,7 @@
                     <table class="table table-borderless" id="term_b_table_h">
                         <tbody ng-repeat="item2 in h_2">
                             <tr ng-if="item2.index==0">
-                                <td class="align-middle">
+                                <td >
                                     <i class="fas fa-folder"></i> {{item2.val}}
                                 </td>
                             </tr>
@@ -99,7 +99,7 @@
                                 <!--<td id="table_b_{{$index}}">
                                     {{decorateWithSpace($index,item2.val)}}
                                 </td>-->
-                                <td class="align-middle">
+                                <td >
                                     <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item2.index)"></i><i class="fa fa-folder-open"></i>{{item2.val}}
                                 </td>
                             </tr>
