page exp design

--- a/html/exp.html
+++ b/html/exp.html
@@ -7,7 +7,7 @@
     <hr>
 
 
-    <table class="table text-center">
+    <table class="table">
 
         <thead>
             <tr>
@@ -67,8 +67,8 @@
                 <th scope="row">
                     Hierarchy
                 </th>
-                <td class="text-center">
-                    <table class="table table-borderless text-center"  id="term_a_table_h">
+                <td>
+                    <table class="table table-borderless"  id="term_a_table_h">
                         <tbody ng-repeat="item in h_1">
                             <tr ng-if="item.index==0">
                                 <td>
@@ -87,7 +87,7 @@
                     </table>
                 </td>
 
-                <td class="text-center">
+                <td >
                     <table class="table table-borderless" id="term_b_table_h">
                         <tbody ng-repeat="item2 in h_2">
                             <tr ng-if="item2.index==0">
