--- a/html/exp.html
+++ b/html/exp.html
@@ -1,4 +1,4 @@
-<div id="experiment" style="margin-top: 100px" ng-mousemove="captureCoordinate($event)">
+<div id="experiment" class="col-sm-12" style="margin-top: 100px" ng-mousemove="captureCoordinate($event)">
 
 
     <h1 id="exp_hello">
@@ -7,7 +7,7 @@
     <hr>
 
 
-    <table class="table">
+    <table class="table col-sm-8">
 
         <thead>
             <tr>
