--- a/html/exp.html
+++ b/html/exp.html
@@ -1,4 +1,4 @@
-<div id="experiment" class="col-sm-12 text-center" style="margin-top: 100px" ng-mousemove="captureCoordinate($event)">
+<div id="experiment" class="col-sm-12 justify-content-center" style="margin-top: 100px" ng-mousemove="captureCoordinate($event)">
 
 
     <h1 id="exp_hello">
