page exp design

--- a/html/exp.html
+++ b/html/exp.html
@@ -6,7 +6,7 @@
     </h1>
     <hr>
 
-
+    <div class="col-sm-1"></div>
     <table class="table col-sm-10">
 
         <thead>
@@ -136,7 +136,7 @@
         </tbody>
 
     </table>
-
+    <div class="col-sm-1"></div>
 
 
 
