--- a/html/exp.html
+++ b/html/exp.html
@@ -7,135 +7,138 @@
     <hr>
 
     <div class="col-sm-1"></div>
-    <table class="table col-sm-10">
+    <div class="col-sm-10">
+        <table class="table">
 
-        <thead>
-            <tr>
-                <th scope="col" style="width:100px">#</th>
-                <th scope="col">
-                    Term A
-                </th>
-                <th scope="col">
-                    Term B
-                </th>
+            <thead>
+                <tr>
+                    <th scope="col" style="width:100px">#</th>
+                    <th scope="col">
+                        Term A
+                    </th>
+                    <th scope="col">
+                        Term B
+                    </th>
 
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th scope="row">
-                    Column Name
-                </th>
-                <td id="A_col_name">
-                    FirstName
-                </td>
-                <td id="B_col_name">
-                    YourName
-                </td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">
+                        Column Name
+                    </th>
+                    <td id="A_col_name">
+                        FirstName
+                    </td>
+                    <td id="B_col_name">
+                        YourName
+                    </td>
 
-            </tr>
-            <tr id="row_type">
-                <th scope="row">
-                    Column Type
-                </th>
-                <td id="A_col_type">
-                    String
-                </td>
-                <td  id="B_col_type">
-                    Varchar
-                </td>
-            </tr>
-            <tr id="row_control">
-                <td colspan="3" id="exp_pair_score">
-                    System Suggestion: 0.6 similar
-                </td>
-            </tr>
-            <tr id="row_instance">
-                <th scope="row">
-                    Instance Example
-                </th>
-                <td id="A_col_instance">
-                    Roee, Avigdor
-                </td>
+                </tr>
+                <tr id="row_type">
+                    <th scope="row">
+                        Column Type
+                    </th>
+                    <td id="A_col_type">
+                        String
+                    </td>
+                    <td  id="B_col_type">
+                        Varchar
+                    </td>
+                </tr>
+                <tr id="row_control">
+                    <td colspan="3" id="exp_pair_score">
+                        System Suggestion: 0.6 similar
+                    </td>
+                </tr>
+                <tr id="row_instance">
+                    <th scope="row">
+                        Instance Example
+                    </th>
+                    <td id="A_col_instance">
+                        Roee, Avigdor
+                    </td>
 
-                <td id="B_col_instance">
-                    Roee Shraga, Avigdor
-                </td>
+                    <td id="B_col_instance">
+                        Roee Shraga, Avigdor
+                    </td>
 
-            </tr>
-            <tr style="margin-top: 5px" id="row_h">
-                <th scope="row">
-                    Hierarchy
-                </th>
-                <td>
-                    <table class="table table-borderless"  id="term_a_table_h">
-                        <tbody ng-repeat="item in h_1">
-                            <tr ng-if="item.index==0">
-                                <td>
-                                    <i class="fas fa-folder"></i>{{item.val}}
-                                </td>
-                            </tr>
-                            <tr ng-if="item.index!=0">
-                                <!--<td id="table_a_{{$index}}">
-                                    {{decorateWithSpace($index,item.val)}}
-                                </td>-->
-                                <td>
-                                    <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item.index)"></i><i class="fa fa-folder-open"></i>{{item.val}}
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </td>
+                </tr>
+                <tr style="margin-top: 5px" id="row_h">
+                    <th scope="row">
+                        Hierarchy
+                    </th>
+                    <td>
+                        <table class="table table-borderless"  id="term_a_table_h">
+                            <tbody ng-repeat="item in h_1">
+                                <tr ng-if="item.index==0">
+                                    <td>
+                                        <i class="fas fa-folder"></i>{{item.val}}
+                                    </td>
+                                </tr>
+                                <tr ng-if="item.index!=0">
+                                    <!--<td id="table_a_{{$index}}">
+                                        {{decorateWithSpace($index,item.val)}}
+                                    </td>-->
+                                    <td>
+                                        <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item.index)"></i><i class="fa fa-folder-open"></i>{{item.val}}
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </td>
 
-                <td >
-                    <table class="table table-borderless" id="term_b_table_h">
-                        <tbody ng-repeat="item2 in h_2">
-                            <tr ng-if="item2.index==0">
-                                <td >
-                                    <i class="fas fa-folder"></i> {{item2.val}}
-                                </td>
-                            </tr>
-                            <tr ng-if="item2.index!=0" >
-                                <!--<td id="table_b_{{$index}}">
-                                    {{decorateWithSpace($index,item2.val)}}
-                                </td>-->
-                                <td >
-                                    <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item2.index)"></i><i class="fa fa-folder-open"></i>{{item2.val}}
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </td>
-            </tr>
+                    <td >
+                        <table class="table table-borderless" id="term_b_table_h">
+                            <tbody ng-repeat="item2 in h_2">
+                                <tr ng-if="item2.index==0">
+                                    <td >
+                                        <i class="fas fa-folder"></i> {{item2.val}}
+                                    </td>
+                                </tr>
+                                <tr ng-if="item2.index!=0" >
+                                    <!--<td id="table_b_{{$index}}">
+                                        {{decorateWithSpace($index,item2.val)}}
+                                    </td>-->
+                                    <td >
+                                        <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item2.index)"></i><i class="fa fa-folder-open"></i>{{item2.val}}
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </td>
+                </tr>
 
 
 
-            <tr>
-                <td colspan="3">
-                    <div style="margin-top: 100px; ">
-                        <div class="md-form col-sm-5" style="margin: 0 auto;float: none;">
-                            <!--<input type="number" id="user_confidence" class="form-control validate" aria-describedby="user_confidenceMD" min="0" max="1" step="0.01">
-                            <label for="user_confidence" data-error="wrong" data-success="right">Your Confidence</label>
-                            <small id="user_confidenceMD" class="form-text text-muted">
-                                Insert Confidence level that this two terms are the same (in [0,1])
-                            </small>
-                            -->
-                            <input id="user_confidence" class="custom-range" type="range" min="0" max="1" step="0.01"/>
-                            <label for="user_confidence" data-error="wrong" data-success="right">Your Confidence</label>
+                <tr>
+                    <td colspan="3">
+                        <div style="margin-top: 100px; ">
+                            <div class="md-form col-sm-5" style="margin: 0 auto;float: none;">
+                                <!--<input type="number" id="user_confidence" class="form-control validate" aria-describedby="user_confidenceMD" min="0" max="1" step="0.01">
+                                <label for="user_confidence" data-error="wrong" data-success="right">Your Confidence</label>
+                                <small id="user_confidenceMD" class="form-text text-muted">
+                                    Insert Confidence level that this two terms are the same (in [0,1])
+                                </small>
+                                -->
+                                <input id="user_confidence" class="custom-range" type="range" min="0" max="1" step="0.01"/>
+                                <label for="user_confidence" data-error="wrong" data-success="right">Your Confidence</label>
+
+                            </div>
+                            <button class="btn btn-md btn-info m-0 px-3" type="button" ng-click="exp_res()" >submit</button>
+
 
                         </div>
-                        <button class="btn btn-md btn-info m-0 px-3" type="button" ng-click="exp_res()" >submit</button>
+
+                    </td>
 
 
-                    </div>
+                </tr>
+            </tbody>
 
-                </td>
+        </table>
 
-
-            </tr>
-        </tbody>
-
-    </table>
+    </div>
     <div class="col-sm-1"></div>
 
 
