--- a/html/exp.html
+++ b/html/exp.html
@@ -1,12 +1,11 @@
 <div id="experiment" class="col-sm-12 justify-content-center" style="margin-top: 100px" ng-mousemove="captureCoordinate($event)">
+    
+    <div class="col-sm-1">
+        <h1 id="exp_hello">
 
-
-    <h1 id="exp_hello">
-
-    </h1>
-    <hr>
-
-    <div class="col-sm-1"></div>
+        </h1>
+        <hr>
+    </div>
     <div class="col-sm-10">
         <table class="table">
 
