--- a/html/exp.html
+++ b/html/exp.html
@@ -1,10 +1,14 @@
 <div id="experiment" class="col-sm-12 justify-content-center" style="margin-top: 100px" ng-mousemove="captureCoordinate($event)">
-    
-    <div class="col-sm-1">
+
+    <div class="col-sm-12">
         <h1 id="exp_hello">
 
         </h1>
         <hr>
+    </div>
+    
+    <div class="col-sm-1">
+
     </div>
     <div class="col-sm-10">
         <table class="table">
