update exp modal

--- a/html/nav.html
+++ b/html/nav.html
@@ -50,6 +50,7 @@
 						<div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink" id="navbar_admin">
 							<a class="dropdown-item" href="#"  data-toggle="modal" data-target="#admin_login">Log in</a>
 							<a class="dropdown-item" href="#"  data-toggle="modal" data-target="#add_exp_modal">Add Experiment</a>
+							<a class="dropdown-item" href="#"  data-toggle="modal" data-target="#update_exp_modal">Update Experiment</a>
 						</div>
 					 </li>
 				</ul>
@@ -253,4 +254,28 @@
 			</div>
 		</div>
 	</div>
+
+	<div class="modal fade" id="update_exp_modal" tabindex="-1" role="dialog" aria-labelledby="Update Experiment Modal" aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" >Update Experiments</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+				</div>
+				<div class="modal-footer">
+					<div id="update_exp_log">
+
+					</div>
+					<button class="btn btn-md btn-info m-0 px-3" type="button">Update</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+
 </div>
