update exp modal

--- a/html/nav.html
+++ b/html/nav.html
@@ -300,34 +300,34 @@
 						<tbody>
 							<tr ng-repeat="exp in experiments">
 								<td>
-									exp.id
+									{{exp.id}}
 								</td>
 								<td>
-									exp.name
+									{{exp.name}}
 								</td>
 								<td>
-									exp.schema_name
+									{{exp.schema_name}}
 								</td>
 								<td>
-									exp.num_pairs
+									{{exp.num_pairs}}
 								</td>
 								<td>
-									exp.disp_instance
+									{{exp.disp_instance}}
 								</td>
 								<td>
-									exp.disp_type
+									{{exp.disp_type}}
 								</td>
 								<td>
-									exp.disp_h
+									{{exp.disp_h}}
 								</td>
 								<td>
-									exp.disp_feedback
+									{{exp.disp_feedback}}
 								</td>
 								<td>
-									exp.disp_control
+									{{exp.disp_control}}
 								</td>
 								<td>
-									exp.is_active
+									{{exp.is_active}}
 								</td>
 							</tr>
 						</tbody>
