update exp modal

--- a/html/nav.html
+++ b/html/nav.html
@@ -278,6 +278,9 @@
 								Schema Name
 							</th>
 							<th>
+								Pairs to Display
+							</th>
+							<th>
 								Display Instances
 							</th>
 							<th>
