update exp modal

--- a/html/nav.html
+++ b/html/nav.html
@@ -306,7 +306,8 @@
 									{{exp.id}}
 								</td>
 								<td>
-									{{exp.name}}
+									<input type="text" class="form-control" id="upt_exp_name" value="{{exp.name}}">
+									<label for="upt_exp_name">Exp Name</label>
 								</td>
 								<td>
 									{{exp.schema_name}}
