update exp modal

--- a/html/nav.html
+++ b/html/nav.html
@@ -309,28 +309,28 @@
 									<input type="text" class="form-control" id="upt_exp_name" value="{{exp.name}}">
 								</td>
 								<td>
-									{{exp.schema_name}}
+									<input type="text" class="form-control" id="upt_exp_shema_name" value="{{exp.schema_name}}">
 								</td>
 								<td>
-									{{exp.num_pairs}}
+									<input type="text" class="form-control" id="upt_exp_num_pairs" value="{{exp.num_pairs}}">
 								</td>
 								<td>
-									{{exp.disp_instance}}
+									<input type="checkbox" class="custom-control-input" id="upt_exp_disp_instacne" value="{{exp.disp_instance}}">
 								</td>
 								<td>
-									{{exp.disp_type}}
+									<input type="checkbox" class="custom-control-input" id="upt_exp_disp_type" value="{{exp.disp_type}}">
 								</td>
 								<td>
-									{{exp.disp_h}}
+									<input type="checkbox" class="custom-control-input" id="upt_exp_disp_h" value="{{exp.disp_h}}">
 								</td>
 								<td>
-									{{exp.disp_feedback}}
+									<input type="checkbox" class="custom-control-input" id="upt_exp_disp_feedback" value="{{exp.disp_feedback}}">
 								</td>
 								<td>
-									{{exp.disp_control}}
+									<input type="checkbox" class="custom-control-input" id="upt_exp_disp_control" value="{{exp.disp_control}}">
 								</td>
 								<td>
-									{{exp.is_active}}
+									<input type="checkbox" class="custom-control-input" id="upt_exp_is_active" value="{{exp.is_active}}">
 								</td>
 							</tr>
 						</tbody>
