update exp modal

--- a/html/nav.html
+++ b/html/nav.html
@@ -317,9 +317,11 @@
 								<td>
 									<div class="custom-control custom-checkbox" ng-if="exp.disp_instance==1">
 										<input type="checkbox" class="custom-control-input" id="upt_exp_disp_instacne_checked_{{exp.id}}" checked>
+										<label class="custom-control-label" for="upt_exp_disp_instacne_checked_{{exp.id}}"></label>
 									</div>
 									<div class="custom-control custom-checkbox" ng-if="exp.disp_instance==0">
 										<input type="checkbox" class="custom-control-input" id="upt_exp_disp_instacne_{{exp.id}}">
+										<label class="custom-control-label" for="upt_exp_disp_instacne_{{exp.id}}"></label>
 									</div>
 								</td>
 								<td>
