update exp modal

--- a/html/nav.html
+++ b/html/nav.html
@@ -382,7 +382,7 @@
 					<div id="update_exp_log">
 
 					</div>
-					<button class="btn btn-md btn-info m-0 px-3" type="button">Update</button>
+					<button class="btn btn-md btn-info m-0 px-3" type="button" ng-click="update_exp()">Update</button>
 				</div>
 			</div>
 		</div>
