update exp modal

--- a/html/exp.html
+++ b/html/exp.html
@@ -53,7 +53,7 @@
                         </td>
                     </tr>
                     <tr id="row_control">
-                        <td colspan="3" id="exp_pair_score">
+                        <td colspan="3" id="exp_pair_score" style="text-align:center">
                             System Suggestion: 0.6 similar
                         </td>
                     </tr>
