update exp modal

--- a/html/exp.html
+++ b/html/exp.html
@@ -53,8 +53,11 @@
                         </td>
                     </tr>
                     <tr id="row_control">
-                        <td colspan="3" id="exp_pair_score" style="text-align:center">
-                            System Suggestion: 0.6 similar
+                        <th scope="row">
+                            System Suggestion
+                        </th>
+                        <td colspan="2" id="exp_pair_score" style="text-align:center">
+                            0.6 similar
                         </td>
                     </tr>
                     <tr id="row_instance">
