--- a/html/new_user.html
+++ b/html/new_user.html
@@ -1,6 +1,7 @@
 <div id="begin_exp_user" class="col-sm-12" style="margin-top: 100px;margin-left: 20px">
 
 	<h5 >Add User</h5>
+	<div class="col-sm-1"></div>
 	<div class="col-sm-10">
 		<div class="row">
 			<div class="col">
@@ -90,4 +91,8 @@
 		</div>
 		<button class="btn btn-md btn-info m-1 px-3" type="button" ng-click="new_user_exp()">Add User</button>
 	</div>
+	<div class="col-sm-1">
+
+	</div>
 </div>
+
