new admin registration

--- a/html/nav.html
+++ b/html/nav.html
@@ -273,6 +273,11 @@
 								<div class="login-form">
 									<div class="main-div">
 										<div class="md-form">
+											<i class="fas fa-user prefix"></i>
+											<input type="text" id="new_admin_name" class="form-control">
+											<label for="new_admin_name" >Type your email</label>
+										</div>
+										<div class="md-form">
 											<i class="fas fa-envelope prefix"></i>
 											<input type="email" id="new_admin_email" class="form-control validate">
 											<label for="new_admin_email" data-error="wrong" data-success="right">Type your email</label>
