--- a/html/nav.html
+++ b/html/nav.html
@@ -237,8 +237,8 @@
 									</div>
 									<div class="md-form">
 										<i class="fas fa-lock prefix"></i>
-										<input type="password" id="admin_name" class="form-control">
-										<label for="admin_name" data-error="wrong" data-success="right">Type your password</label>
+										<input type="password" id="admin_pass" class="form-control">
+										<label for="admin_pass" data-error="wrong" data-success="right">Type your password</label>
 									</div>
 								</div>
 							</div>
