upload files new exp

--- a/html/nav.html
+++ b/html/nav.html
@@ -173,8 +173,8 @@
 									<div class="col">
 										<div class="col-sm-12 md-form input-group">
 											<div class="input-default-wrapper">
-												<input type="file" id="sec_xsd" class="input-default-js">
-												<label class="label-for-default-js rounded-right mb-3" for="sec_xsd" ng-file="sec_xsd_file">
+												<input type="file" id="sec_xsd" class="input-default-js" ng-file="sec_xsd_file">
+												<label class="label-for-default-js rounded-right mb-3" for="sec_xsd" >
 													<span class="span-choose-file">Choose second XSD file</span>
 												</label>
 											</div>
