--- a/html/new_user.html
+++ b/html/new_user.html
@@ -68,7 +68,7 @@
 				<div class="col">
 					<div class="md-form">
 						<select class="browser-default custom-select" id="new_user_lang" >
-							<option selected>Open this select menu</option>
+							<option selected>Select Language</option>
 							<option value="Afrikaans">Afrikaans</option>
 							<option value="Albanian">Albanian</option>
 							<option value="Arabic">Arabic</option>
