--- a/html/exp.html
+++ b/html/exp.html
@@ -109,7 +109,7 @@
                                         <!--<td id="table_b_{{$index}}">
                                             {{decorateWithSpace($index,item2.val)}}
                                         </td>-->
-                                        <td style="color:{{item.color}}">
+                                        <td style="color:{{item2.color}}">
                                             <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item2.index)"></i><i class="fa fa-folder-open"></i>{{item2.val}}
                                         </td>
                                     </tr>
