add pause after 0.2*pairs_num

--- a/html/exp.html
+++ b/html/exp.html
@@ -167,7 +167,7 @@
                 </div>
                 <div class="modal-footer">
 
-                    <button class="btn btn-md btn-info m-0 px-3" type="button" data-dismiss="pause_exp_modal">I'm Ready!</button>
+                    <button class="btn btn-md btn-info m-0 px-3" type="button" data-dismiss="modal">I'm Ready!</button>
                 </div>
 
             </div>
