--- a/html/exp.html
+++ b/html/exp.html
@@ -188,7 +188,7 @@
                 </div>
                 <div class="modal-footer">
 
-                    <button class="btn btn-md btn-info m-0 px-3" type="button" data-dismiss="modal">Close</button>
+                    <button class="btn btn-md btn-info m-0 px-3" type="button" data-dismiss="modal" ng-click="show_pause_after_feedback()">Close</button>
                 </div>
 
             </div>
