set range to start 0

--- a/html/exp.html
+++ b/html/exp.html
@@ -131,7 +131,7 @@
                                     </small>
                                     -->
                                     <input id="user_confidence" class="custom-range" type="range" min="0" max="100" step="1"/>
-                                    <label for="user_confidence" data-error="wrong" data-success="right">Your Confidence</label>
+                                    <label for="user_confidence" data-error="wrong" data-success="right" style="padding-left: 15px;padding-top: 10px">Your Confidence</label>
 
                                 </div>
                                 <button class="btn btn-md btn-info m-0 px-3" type="button" ng-click="exp_res()" >submit</button>
