add pairs remaining number to pause modal

--- a/html/exp.html
+++ b/html/exp.html
@@ -163,7 +163,7 @@
                     </button>
                 </div>
                 <div class="modal-body" >
-                    <div id="puase_modal_body">
+                    <div id="pause_modal_body">
 
                     </div>
 
