add yes no for match to answer

--- a/html/exp.html
+++ b/html/exp.html
@@ -132,7 +132,7 @@
                                 <label class="custom-control-label" for="user_ans_no">No Match</label>
                             </div>
                         </td>
-                        <td colspan="2">
+                        <td style="width:450px">
                             <div>
                                 <div class="md-form col-sm-5" style="margin: 0 auto;float: none;">
                                     <!--<input type="number" id="user_confidence" class="form-control validate" aria-describedby="user_confidenceMD" min="0" max="1" step="0.01">
@@ -143,13 +143,11 @@
                                     -->
                                     <input id="user_confidence" class="custom-range" type="range" min="0" max="100" step="1"/>
                                     <label for="user_confidence" data-error="wrong" data-success="right" style="padding-left: 15px;padding-top: 10px">Your Confidence</label>
-
                                 </div>
-                                <button class="btn btn-md btn-info m-0 px-3" type="button" ng-click="exp_res()" >submit</button>
-
-
                             </div>
-
+                        </td>
+                        <td>
+                            <button class="btn btn-md btn-info m-0 px-3" type="button" ng-click="exp_res()" >submit</button>
                         </td>
 
 
