change to ofra - get random TEST exp and then choose the only one active exp

--- a/html/nav.html
+++ b/html/nav.html
@@ -356,7 +356,7 @@
 									<input type="text" class="form-control" id="upt_exp_name_{{exp.id}}" value="{{exp.name}}">
 								</td>
 								<td>
-									<input type="text" class="form-control" id="upt_exp_shema_name_{{exp.id}}" value="{{exp.schema_name}}">
+									<input type="text" class="form-control" id="upt_exp_shcema_name_{{exp.id}}" value="{{exp.schema_name}}">
 								</td>
 								<td>
 									<input type="text" class="form-control" id="upt_exp_num_pairs_{{exp.id}}" value="{{exp.num_pairs}}">
